--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
+certifi==2025.1.31
+charset-normalizer==2.1.1
+idna==3.10
 mutagen==1.46.0
+python-dotenv==1.1.0
 requests==2.28.1
+urllib3==1.26.20
